[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Levels/LevelTitle.gd" type="Script" id=1]
[ext_resource path="res://assets/cave.png" type="Texture" id=2]
[ext_resource path="res://assets/title.png" type="Texture" id=3]
[ext_resource path="res://assets/font_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Objects/high_score.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/font_default.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/sound_on.png" type="Texture" id=7]
[ext_resource path="res://assets/sound_off.png" type="Texture" id=8]
[ext_resource path="res://assets/tips.tres" type="DynamicFont" id=9]

[sub_resource type="Animation" id=1]
resource_name = "START"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.247059, 0.580392, 0.0392157, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "play"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.247059, 0.580392, 0.0392157, 0 ), Color( 0.247059, 0.580392, 0.0392157, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "switch_back"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.247059, 0.580392, 0.0392157, 0 ), Color( 0.027451, 0.0235294, 0.0941176, 1 ), Color( 0.247059, 0.580392, 0.0392157, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="LevelTitle" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Logo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 960, 290 )
texture = ExtResource( 3 )

[node name="Play" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -110.0
margin_right = 135.0
margin_bottom = 110.0
focus_mode = 0
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.215686, 0.670588, 0.0862745, 1 )
custom_colors/font_color_hover = Color( 0.294118, 0.74902, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.0980392, 0.827451, 0.243137, 1 )
enabled_focus_mode = 0
text = "Play"
flat = true

[node name="Quit" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 130.0
margin_right = 192.5
margin_bottom = 350.0
rect_scale = Vector2( 0.6, 0.6 )
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.819608, 0.109804, 0.109804, 1 )
custom_colors/font_color_hover = Color( 0.898039, 0.188235, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.266667, 0.266667, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "START"
anims/START = SubResource( 1 )
anims/play = SubResource( 2 )
anims/switch_back = SubResource( 3 )

[node name="high_score" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_left = 35.0
margin_top = 32.0
margin_right = 125.0
margin_bottom = 70.0

[node name="Website" type="LinkButton" parent="CanvasLayer"]
margin_left = 1370.0
margin_top = -10.0
margin_right = 1911.0
margin_bottom = 58.0
mouse_default_cursor_shape = 0
custom_fonts/font = ExtResource( 6 )
action_mode = 0
text = "WEBSITE: HEN6003.GITHUB.IO"
underline = 1

[node name="Version" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -67.0
margin_right = -9.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "VERSION: 0.3.4"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -72.0
margin_right = 155.0
margin_bottom = 4.0
focus_mode = 0
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
enabled_focus_mode = 0
text = "Music"
flat = true
clip_text = true

[node name="play_tip" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_right = 336.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 9 )
text = "Or Press P"

[node name="quit_tip" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = 180.0
margin_right = 336.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 9 )
text = "Or Press ESC"

[node name="mute_tip" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -790.0
margin_top = 500.0
margin_right = -574.0
margin_bottom = 556.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 9 )
text = "Or Press M"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0235294, 0.0941176, 1 )
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Website" to="." method="_on_LinkButton_pressed"]
[connection signal="toggled" from="CanvasLayer/CheckButton" to="." method="_on_CheckButton_toggled"]
